RESOLVED FIXED106686
Fixed some bogus PropertyOffset ASSERTs
https://bugs.webkit.org/show_bug.cgi?id=106686
Summary Fixed some bogus PropertyOffset ASSERTs
Geoffrey Garen
Reported 2013-01-11 12:16:53 PST
Fixed some bogus PropertyOffset ASSERTs
Attachments
Patch (3.13 KB, patch)
2013-01-11 12:19 PST, Geoffrey Garen
barraclough: review+
Geoffrey Garen
Comment 1 2013-01-11 12:19:09 PST
Geoffrey Garen
Comment 2 2013-01-11 12:21:39 PST
Note You need to log in before you can comment on or make changes to this bug.